// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BigAmount /> renders without crashing (type: currency) 1`] = `
<div
  class="sc-bdVaJa jlxkRb"
>
  <span
    class="sc-bwzfXH kwYOPm"
    color="#4E5C6E"
  >
    $
  </span>
  <span>
    99
  </span>
  <span
    class="sc-bwzfXH kwYOPm"
    color="#4E5C6E"
  >
    .99
  </span>
</div>
`;

exports[`<BigAmount /> renders without crashing (type: percentage) 1`] = `
<div
  class="sc-bdVaJa jlxkRb"
>
  <span>
    99.99
  </span>
  <span
    class="sc-bwzfXH kwYOPm"
    color="#4E5C6E"
  >
    %
  </span>
</div>
`;

exports[`<BigAmount /> renders without crashing 1`] = `
<div
  class="sc-bdVaJa jlxkRb"
>
  <span>
    99.99
  </span>
</div>
`;
